-- snort.lua tweaks to back out random test foo
-- additional valgrind tweaks
-- fixed several Xcode static analysis warnings
-- updated config_changes
-- commented out pcre_free_study() - issue on mac
-- more refactoring of tcp session - still incomplete
-- patched cd_tcp.cc and packet_manager.cc for length underflow issue
-- fix active.max_responses default, etc.

121
-- valgrind fixes
-- basic reload restoration
-- support cmd() form of snort.cmd()
-- misc FIXITs
-- converted wizard to fully stateful
-- implemented paf rescan upon auto service id
-- changed StreamSplitter::max() from uint32_t to unsigned
-- changed stream_tcp.paf_max to max_pdu
-- added parse errors for module begin()/end() fails
-- changed reload to not fatal on parse errors

120
-- tweaked --help!
-- added unused stringify(enum)
-- fixed piroir typo
-- fixed normalizer.tcp.ips
-- pulled in latest from Josh
-- fixed valgrind issues
-- refactored Shells to support multiple files/policies
-- changed detect reset to accommodate buffer population before reassembly
-- initial multiple policy binding
-- pulled in codec Makefile fix from Josh

119
-- updated binder
-- fixed packet direction
-- added default service bindings when wizard is configured but binder is not
-- updated snort.lua
-- added snort_defaults.lua
-- latest from Josh

118
-- fixed bind action
-- tweaked main loop
-- added module 1-line help
-- latest from josh
-- added plugin 1-line help (should be same as module, if plugin has module)

117
-- added --stdin-rules
-- added #begin / #end comments for rules
-- changed PAF_Status to StreamSplitter::Status
-- removed target reader current host/app
-- fixed error / warning line number issue
-- changed --conf-error-out to --pedantic
-- more FIXIT-H fixed
-- removed process.plugin_path and process.script_path since they are
   needed ahead of parsing
-- added idle processing, though still as sketchy as Snort until alpha 2