@@ -8,6 +8,8 @@
 -- more refactoring of tcp session - still incomplete
 -- patched cd_tcp.cc and packet_manager.cc for length underflow issue
 -- fix active.max_responses default, etc.
+-- fixed byte_extract leak, session flow data leak
+-- changed pcre JIT to be optional by #define; need autofoo
 
 121
 -- valgrind fixes
